addded wedding party page, fixed a mobile layout issue and added the booking deadline for the hotel

--- a/public/css/additions.css
+++ b/public/css/additions.css
@@ -24,9 +24,8 @@ img.bg {
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: medium;
   font-weight: bold;
-  position: absolute;
-  right: 5px;
-  top: 11px;
+  float: right;
+  margin-top: 11px;
   color: #7F003F;
 }
 
